# web_agent

./: .env.example  .gitignore  CMakeLists.txt  README.md  READMEeng.md  main.cpp  openapi.yaml
.github/workflows/: ci.yml  tests.yml
docs/: JOBS-ru.md  JOBS.md
jobs/: CONF.json  FILE.json  TASK.json  TIMEOUT.json  create_file.json  create_file.yaml  directory.json  directory.yaml
libs/agent/include/: agent.h
libs/agent/src/: agent.cpp
libs/api/include/: api.h
libs/api/src/: api.cpp
libs/classes/include/: classes.h
libs/classes/src/: classes.cpp
libs/logger/include/: logger.h
libs/logger/src/: logger.cpp
libs/settings/include/: settings.h
libs/settings/src/: settings.cpp
tests/: agent_tests.cpp  api_tests.cpp  main_tests.cpp
